<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/statusBarFix"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white" />

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:fitsSystemWindows="false"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="微软雅黑"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/loginCode"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="+86"
                        android:textColor="@color/blue"
                        android:textSize="16dp" />

                    <net.suntrans.looney.widgets.EditView
                        android:maxLines="11"
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:background="@null"
                        android:hint="@string/tx_input_phone"
                        android:inputType="phone"
                        android:textSize="16dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp">

                    <Button
                        android:id="@+id/getCode"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bt_bg_autolink"
                        android:text="@string/title_get_code"
                        android:textColor="@color/white" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="+86"
                        android:textColor="@color/blue"
                        android:textSize="16dp" />

                    <net.suntrans.looney.widgets.EditView
                        android:maxLines="11"
                        android:id="@+id/phone1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:background="@null"
                        android:hint="@string/tx_input_phone"
                        android:inputType="phone"
                        android:textSize="16dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/blue"
                        android:textSize="16dp" />

                    <net.suntrans.looney.widgets.EditView
                        android:maxLines="18"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:background="@null"
                        android:hint="请输入密码"
                        android:inputType="text"
                        android:digits="@string/abcd123"
                        android:textSize="16dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bt_bg_autolink"
                        android:text="@string/title_bt_login"
                        android:textColor="@color/white" />
                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/changeLoginType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/title_password_login"
                android:textColor="@color/blue"
                android:textSize="14dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="@color/divider_color" />

            <TextView
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="第三方登录"
                android:textColor="@color/gray" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/wxLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weixin" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_login_protocal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/protocolTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="《三川用户协议》"
            android:textColor="@color/blue" />
    </LinearLayout>

</LinearLayout>